--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,13 @@
 services:
-  - type: web
+  - type: worker
     name: crypto-bot
     env: python
-    plan: free
     buildCommand: ""
-    startCommand: python main.py
+    startCommand: "python main.py"
     envVars:
-      - key: BINANCE_API_KEY
-        value: твій_ключ
-      - key: BINANCE_API_SECRET
-        value: твій_секрет
       - key: TELEGRAM_TOKEN
-        value: твій_токен
-      - key: TELEGRAM_CHAT_ID
-        value: твій_ID
+        value: "впиши_токен_бота"
+      - key: BINANCE_API_KEY
+        value: "впиши_ключ"
+      - key: BINANCE_SECRET_KEY
+        value: "впиши_секрет"
